# progrust

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: Cargo.toml  german_tracker.db
backend/migrations/: 0001_initial.sql
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ProgressDashboard.tsx  SessionTracker.tsx
