[package]
name = "german-tracker-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "german-tracker-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "uuid", "migrate"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
